src/snapshots/lox_rust2__tests__inheritance4.lox.snap
---
source: src/main.rs
expression: contents
---
stdout:

stderr:
Can't use 'super' outside of a class.
