src/snapshots/lox_rust2__tests__return3.lox.snap
---
source: src/main.rs
expression: contents
---
stdout:

stderr:
Cannot return from top-level code.
