src/snapshots/lox_rust2__tests__scopes1.lox.snap
---
source: src/main.rs
expression: contents
---
stdout:
inner a
outer b
global c
outer a
outer b
global c
global a
global b
global c

stderr:
