src/snapshots/lox_rust2__tests__scopes3.lox.snap
---
source: src/main.rs
expression: contents
---
stdout:

stderr:
Already a variable with the name 'a' in this scope.
