src/snapshots/lox_rust2__tests__variables4.lox.snap
---
source: src/main.rs
expression: contents
---
stdout:

stderr:
[line 1] Error at '=': Invalid assignment target
